--- a/newbabylayout/cart.html
+++ b/newbabylayout/cart.html
@@ -752,7 +752,7 @@ input[type="number"]::-webkit-inner-spin-button {
             </div>
 
             <div class="footer-section">
-                <h3><a href="contact.html">CONTACT US</a></h3>
+                <h3><a href="contact.html" style="text-decoration:none;color:black;">CONTACT US</a></h3>
                 <p>For Sale: <a href="mailto:Earthbubs@co.in">Earthbubs@co.in</a></p>
                 <p>Call: +91 1234567890</p>
                 <p>For Complaints: 1800 202 2222</p>
@@ -777,3 +777,4 @@ input[type="number"]::-webkit-inner-spin-button {
     </footer>
 </body>
 </html>
+
