--- a/newbabylayout/contact.html
+++ b/newbabylayout/contact.html
@@ -362,7 +362,9 @@
 .next-arrow {
     float: right; /* Aligns to the right */
 }
-
+.bredcrumbs{
+    font-size:1.5em;
+    
 </style>
 
 </head>
@@ -404,6 +406,9 @@
             </div>
         </div>
         </header>
+    <div class=breadcrumbs>
+        <h1>Home>Contact Us</h1>
+    </div>
            <div class="contact-container">
     <div class="contact-info">
         <h2>Contact Information</h2>
@@ -487,4 +492,5 @@
     </footer>
 
     </body>
+
     </html>
