--- a/newbabylayout/index.html
+++ b/newbabylayout/index.html
@@ -1263,7 +1263,7 @@ h1 {
             </div>
 
             <div class="footer-section">
-                <h3><a href="contact.html">CONTACT US</a></h3>
+                <h3><a href="contact.html" style="text-decoration:none;color:black;">CONTACT US</a></h3>
                 <p>For Sale: <a href="mailto:Earthbubs@co.in">Earthbubs@co.in</a></p>
                 <p>Call: +91 1234567890</p>
                 <p>For Complaints: 1800 202 2222</p>
@@ -1288,3 +1288,4 @@ h1 {
 
 </body>
 </html>
+
